2007-02-18  Nicola Pero <nicola.pero@meta-innovation.com>

	* configure.ac: Check for GNUSTEP_MAKEFILES, not GNUSTEP_SYSTEM_ROOT.
	* configure: Regenerated.
	* Makefile.postamble (config.mak): New rule.
	
2006-12-19  David Wetzel <dave@turbocat.de>

        * GSWAdaptors/common/GSWLoadBalancing.c: small cosmetic changes in spacing

        Changed logging to include the file name and line number.
        A logfile with "[debug] ../common/GSWUtil.c(165)" does not make much sense :-) 

        * GSWAdaptors/Apache/mod_gsweb.c
        * GSWAdaptors/common/GSWUtil.c
        * GSWAdaptors/common/GSWLoadBalancing.c
        * GSWAdaptors/common/GSWUtil.h
        * GSWAdaptors/common/GSWDict.c
        * GSWAdaptors/common/GSWHTTPRequest.c
        * GSWAdaptors/common/GSWStats.c
        * GSWAdaptors/common/GSWHTTPResponse.c
        * GSWAdaptors/common/GSWURLUtil.c
        * GSWAdaptors/common/GSWApp.c
        * GSWAdaptors/common/GSWAppRequest.c
        * GSWAdaptors/common/GSWAppConnectSocket.c
        * GSWAdaptors/common/GSWConfig.c

2006-12-12  David Ayers  <ayers@fsfe.org>

	* GSWAdaptors/Apache/mod_gsweb.c: Add defines to support Apache 2.2.
	
	* GSWAdaptors/common/GSWLoadBalancing.c
	(GSWLoadBalancing_FindInstance): Remove unsused variable.
	* GSWAdaptors/common/GSWStats.c (GSWStats_formatStats): Ditto.
	* GSWAdaptors/common/GSWURLUtil.c (GSWParseURL): Ditto.
	* GSWAdaptors/common/GSWHTTPResponse.c: Include netdb.h.
	* GSWAdaptors/common/GSWApp.c: Include time.h.
	(GSWAppInfo_MakeDictKeyName): Add parentheses to avoid compiler
	warning.
	* GSWAdaptors/common/GSWAppRequest.c
	(GSWAppRequest_SendAppRequestToApp): Add missing CONST declaration.
	* GSWAdaptors/common/GSWAppConnectSocket.c: Include unistd.h
	* GSWAdaptors/common/GSWConfig.c: Ditto.
	* GSWAdaptors/common/GSWConfig.h (g_pAppDict, config_mtime):
	Remove unused declarations.
	(GSWConfig_LoadConfiguration): Add missing declaration.
	
2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>
